Bug 1110552 - faster ``showHideJob`` perf
Switched from using jQuery for showing/hiding and finding
classes to using DOM calls.  This ended up being about 17% faster when
toggling unclassified failures.  Also made ``filter-shown`` class maintain
the visible/not visible attributes, rather than setting them explicitly.

--- a/ui/css/treeherder.css
+++ b/ui/css/treeherder.css
@@ -487,6 +487,11 @@ th-watched-repo {
   padding: 0 2px 0 2px;
   vertical-align: 0;
   line-height: 1.32;
+  display: none;
+}
+
+.filter-shown {
+    display: inline-block;
 }
 
 .table-super-condensed thead > tr > th,
